website/static/css/index.css
* {
    padding: 0;
    margin: 0;
    font-family: "Arial", sans-serif;
}

html, body {
    height: 100%;
    background-color: #2b2b2b;
}

header {
    text-align: center;
    padding-top: 10px;
}

header > hr {
    background-color: #666666;
    margin-top: 10px;
    margin-bottom: 10px;
}

.clear-fix {
    clear: both;
}

#content-container {
    min-height: 100%;
    position: relative;
    width: 80%;
    max-width: 1100px;
    margin-left: auto;
    margin-right: auto;
    background-color: #ffffff;
}

#content {
    min-height: 100%;
    padding: 0 10px 60px;
}

#time-container {
    width: 95%;
    height: 30px;
    margin-left: auto;
    margin-right: auto;
}

#time {
    width: calc(90% - 4px);
    margin-left: 2px;
    margin-right: 2px;
    padding-bottom: 10px;
    float: left;
}

#time-container > #start-time {
    width: 5%;
    float: left;
}

#time-container > #end-time {
    width: 5%;
    float: left;
}

#time > #amount {
    display: none;
}

#time > #time-slider {
    vertical-align: middle;
}

#graph-bar-container {
    width: 95%;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    height: 40px;
}

#change-graph-box {
    font-size: 12px;
    float: left;
    width: 5%;
}

#change-graph-box > .arrow {
    width: 25%;
    margin-left:auto;
    margin-right:auto;
}

#change-graph-box > #graph-label {
    text-align: center;
}

#open-graphs {
    float: left;
    border: black solid 1px;
    width: 5%;
    height: 40px;
}

#open-graphs > a {
    text-decoration: none;
    color: black;
}

#open-graphs .fa-bar-chart {
    font-size: 2.4em;
    margin-left: 8%;
}

#graph-bar {
    float: left;
    border: #000000 solid 1px;
    width: calc(90% - 6px);
    height: 40px;
    margin-left: 1px;
    margin-right: 1px;
}

.ui-slider > .ui-slider-handle {
    width: 10px;
}

.column {
    float: left;
    min-width: calc((100% - 420px) / 2);
    height: 420px;
}

.side-bar {
    width: 70%;
    min-width: 233px;
}

.border {
    border: solid black 1px;
}

.center-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.hug-right {
    margin-left:auto;
    margin-right: 2%;
}

.hug-left {
    margin-left: 2%;
    margin-right: auto;
}

#left-column > #toggle-box {
    height: 55%;
    margin-bottom: calc(2% - 2px);
}

#toggle-box > div.column {
    float: left;
    height: 100%;
    width: 50%;
}

#toggle-box > div.column > div {
    width: 100%;
    height: 20%;
}

#toggle-box > div.column > div > span {
    margin-left: 10%;
    font-size: 0.8em;
}

#toggle-box > div.column label {
    display: inline-block;
    width: 32px;
    height: 32px;
    margin-top: 5%;
    margin-left: 5%;
}

#toggle-box > div.column img {
    width: 32px;
    height: 32px;
    vertical-align: middle;
}

#left-column > #map-presence {
    height: 43%;
}

#left-column > #map-presence > .team-block{
    height: 50%;
}

#map-presence > .team-block > img {
    margin-top: 2%;
    margin-left: 2%;
    height: 90%;
}

#map-presence > .team-block > .presence {
    margin-top: 1.5%;
    margin-right: 2%;
    float: right;
    width: 50%;
    height: 90%;
    border-radius: 10px;
}

#map-presence > .team-block > .presence > h1 {
    margin-top: 20%;
    font-size: 2em;
    vertical-align: middle;
    text-align: center;
}

#right-column > #path-toggle {
    height: 20%;
    margin-bottom: calc(2% - 2px);
}

#right-column > #path-toggle > .heading {
    text-align: center;
    padding-bottom: 5px;
}

#right-column > #player-info {
    height: 78%;
}

#right-column > #player-info > #character-name {
    text-align: center;
    min-height: 24px;
}

#right-column > #player-info > #hero-icon {
    height: 100px;
    width: 175px;
    background-image: url('/static/img/heroes/default.jpg');
    background-size: cover;
    overflow: hidden;
}

#hero-icon > img {
    height: 100%;
}

#right-column > #player-info > #items {
    width: 178px;
    height: calc(95% - 128px - 4px);
}

#items .table-cell {
    width: calc(50% - 2px);
    height: 64px;
    max-width: 88px;
    background: #222222 url('/static/img/items/emptyitembg.jpg');
    border-right: 1px solid white;
    border-bottom: 1px solid white;
}

#items .table-cell:nth-child(1) {
    border-left: 1px solid white;
}

#items .table-row {
    max-height: 64px;
}

#items .table-row:first-of-type .table-cell {
    border-top: 1px solid white;
}

#map-container {
    float: left;
}

#map-container > canvas#dota-map {
    background-size: cover;
    background-image: url("/static/img/dota2-map.jpg");
}

.radiant {
    background-color: rgba(51, 95, 255, 0.75);
}

.dire {
    background-color: rgba(255, 7, 18, 0.75);
}

#team-graphs {
    width: 85%;
    height: 55px;
    margin-top: 10px;
}

#team-graphs > .score-box {
    width: 40%;
    height: 100%;
}

#team-graphs > #radiant {
    float: left;
}

.team-stats {
    padding-top: 1%;
    width: 76%;
}

.team-stats img {
    width: 8%;
    vertical-align: middle;
}

.team-stats > div {
    height: 23px;
}

.total-xp, .net-worth {
    width: 91%;
    height: 70%;
    display: inline-block;
}

#radiant .label {
    position: absolute;
    left: 11%;
}

#dire .label {
    position: absolute;
    right: 11%;
}

.total-xp {
    background: #59CBD8;
}

.net-worth {
    background: #ffff00;
}

#team-graphs > #radiant > .team-stats img {
    padding-right: 1%;
}

#team-graphs > #dire > .team-stats img {
    padding-left: 1%;
}

.kills {
    font-size: 1.2em;
    padding-top: 1%;
    width: 11%;
    text-align: center;
}

.kills > .count {
    font-weight: bold;
}

#team-graphs > #radiant > .kills {
    float: right;
    padding-right: 2%;
}

#team-graphs > #radiant > .team-stats {
    float: left;
    padding-left: 1%;
}

#team-graphs > #dire {
    float: right;
}

#team-graphs > #dire > .kills {
    padding-left: 2%;
}

#team-graphs > #dire > .team-stats {
    float: right;
    text-align: right;
    padding-right: 1%;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 20px;
    text-align: center;
    font-size: 10px;
}

.border-white {
    border-color: white;
}

.table {
    display: table;
}

.table-row {
    height: 33%;
    min-height: 64px;
}

.table-cell {
    float: left;
    height: 100%;
    width: 50%;
    overflow: hidden;
}

.table-cell > img {
    height: 100%;
}

.hidden-text {
    color: transparent;
}

.alt-checkbox {
    box-shadow: 0 0 0 1px #9F9F9F;
}

.alt-checkbox.checked::before {
    color: #000;
}

#uparrow {
    cursor: pointer;
}

#downarrow {
    cursor: pointer;
}

